add junit and edit logic